--- a/_course_files/3-Gateways/7-istio-rules-prefix.yaml
+++ b/_course_files/3-Gateways/7-istio-rules-prefix.yaml
@@ -26,8 +26,10 @@ spec:
     - "*" # Copy the value in the gateway hosts - usually a Domain Name
   gateways:
     - ingress-gateway-configuration
+  
+  # Route based on prefix match
   http:
-  - match: # List of prefix
+  - match: 
     - uri: # IF
         prefix: "/experimental"
     - uri: # OR
@@ -61,49 +63,5 @@ spec:
         status: canary
       name: canary-group
 
----
-kind: VirtualService
-apiVersion: networking.istio.io/v1alpha3
-metadata:
-  name: fleetman-webapp
-  namespace: default
-spec:
-  hosts:     
-    - "*"    
-  gateways:
-    - ingress-gateway-configuration
-  http:
-  - match: # This is a LIST
-    - uri: # IF
-        prefix: "/experimental"
-    - uri: # OR
-        prefix: "/canary"
 
-    route: # THEN
-    - destination:
-        host: fleetman-webapp
-        subset: canary-group
-
-  - match: # ELSE - Catch
-    - uri:
-        prefix: "/"
-    route:
-    - destination:
-        host: fleetman-webapp
-        subset: stable-group
----
-kind: DestinationRule
-apiVersion: networking.istio.io/v1alpha3
-metadata:
-  name: fleetman-webapp
-  namespace: default
-spec:
-  host: fleetman-webapp.default.svc.cluster.local 
-  subsets:
-    - labels:   
-        status: stable 
-      name: stable-group
-    - labels:
-        status: canary
-      name: canary-group
 
