Dark Releases and Fault injection

--- a/_course_files/3-Gateways/8-FrontCanary-BackSticky.yaml
+++ b/_course_files/3-Gateways/8-FrontCanary-BackSticky.yaml
@@ -57,7 +57,7 @@ spec:
 kind: VirtualService
 apiVersion: networking.istio.io/v1alpha3
 metadata:
-  name: staff-service
+  name: fleetman-staff-service
   namespace: default
 spec:
   hosts:
@@ -74,7 +74,7 @@ spec:
 kind: DestinationRule      
 apiVersion: networking.istio.io/v1alpha3
 metadata:
-  name: staff-service
+  name: fleetman-staff-service
   namespace: default
 spec:
   host: fleetman-staff-service
