--- a/_course_files/5-FaultInjection/5-application-no-istio.yaml
+++ b/_course_files/5-FaultInjection/5-application-no-istio.yaml
@@ -7,7 +7,7 @@ spec:
     matchLabels:
       app: position-simulator
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: position-simulator
@@ -30,7 +30,7 @@ spec:
     matchLabels:
       app: position-tracker
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: position-tracker
@@ -53,7 +53,7 @@ spec:
     matchLabels:
       app: api-gateway
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: api-gateway
@@ -76,11 +76,13 @@ spec:
     matchLabels:
       app: webapp
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: webapp
-        version: original
+        version: v1.0.0
+        envronment: production
+        status: stable
     spec:
       containers:
       - name: webapp
@@ -93,17 +95,19 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapp-experimental
+  name: webapp-canary
 spec:
   selector:
     matchLabels:
       app: webapp
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: webapp
-        version: experimental
+        version: v1.0.1
+        envronment: production
+        status: canary
     spec:
       containers:
       - name: webapp
@@ -122,7 +126,7 @@ spec:
     matchLabels:
       app: vehicle-telemetry
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: vehicle-telemetry
@@ -144,11 +148,13 @@ spec:
     matchLabels:
       app: staff-service
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: staff-service
-        version: safe
+        version: v1.0.0
+        envronment: production
+        status: stable
     spec:
       containers:
       - name: staff-service
@@ -163,17 +169,19 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: staff-service-risky-version
+  name: staff-service-canary
 spec:
   selector:
     matchLabels:
       app: staff-service
   replicas: 1
-  template: # template for the pods
+  template: 
     metadata:
       labels:
         app: staff-service
-        version: risky
+        version: v1.0.1
+        envronment: production
+        status: canary
     spec:
       containers:
       - name: staff-service
@@ -190,9 +198,6 @@ kind: Service
 metadata:
   name: fleetman-webapp
 spec:
-  # This defines which pods are going to be represented by this Service
-  # The service becomes a network endpoint for either other services
-  # or maybe external users to connect to (eg browser)
   selector:
     app: webapp
   ports:
@@ -204,11 +209,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fleetman-position-tracker
-
 spec:
-  # This defines which pods are going to be represented by this Service
-  # The service becomes a network endpoint for either other services
-  # or maybe external users to connect to (eg browser)
   selector:
     app: position-tracker
   ports:
