--- a/_course_files/6-CircuitBreaking/6-gateway.yaml
+++ b/_course_files/6-CircuitBreaking/6-gateway.yaml
@@ -21,7 +21,7 @@ metadata:
   name: fleetman-webapp
   namespace: default
 spec:
-  hosts:      # which incoming host are we applying the proxy rules to???
+  hosts:     
     - "*"
   gateways:
     - ingress-gateway-configuration
